# riemann-solver

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LEDGER.md  LICENSE  LICENSE-CODE  LICENSE-PAPER  README.md  SECURITY.md  WARP.md  apply_final_fixes.py  apply_final_paper_edits.py  bench_hardware.py  bootstrap.ps1  bootstrap.sh  create_fix_docs.py  create_formatting_docs.py  cvs_sweep_job_b.py  falsify.py  falsify_advanced.py  falsify_deep.py  falsify_edge_cases.py  falsify_final.py  falsify_own_proof.py  falsify_structural.py  fix_derivative_bug.py  fix_tailbound.py  pr_body.tmp  preflight.py  pyproject.toml  requirements.txt  research_log.jsonl  research_loop.md  run.py  run_bridge.py  run_c17.py  run_cvs.py  run_extended.py  run_solver.py  (+12 more)
.github/: CODEOWNERS  pull_request_template.md
.specsmith/: agents.md.m006.bak  ledger-chain.txt  migration-state.json  requirements.json  testcases.json  trace.jsonl
archive/: WARP.md  bench_hardware.py  falsify_advanced.py  falsify_deep.py  falsify_own_proof.py  falsify_structural.py  preflight.py  run.py  run_bridge.py  run_c17.py  run_cvs.py  run_extended.py  run_solver.py  test_exp_t4.py  verify_algebraic_core.py  verify_debruijn_condition.py  verify_logconcavity.py  verify_logconcavity_rigorous.py  verify_truncation_and_crosscheck.py
benchmarks/: bench_aee_papers.py  bench_cvs.py  bench_li.py  bench_louiz_kernel.py  bench_spacing.py  bench_this_work.py  bench_zeros.py  run_paper_benchmarks.py
docs/: APPROACH.md  ARCHITECTURE.md  C_204_after_epsilon_star.md  FALSIFICATION.md  LANDSCAPE.md  LEDGER.md  TESTS.md  (+47 more)
(+186 files in other folders)
