[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riemann-solver"
version = "0.1.0"
description = "Rigorous proof or disproof of the Riemann Hypothesis targeting the Clay Millennium Prize. Multiple verification criteria, falsification harnesses, and Connes spectral program integration."
readme = "README.md"
license = {text = "Research & Evaluation"}
requires-python = ">=3.11"
authors = [
    {name = "Tristen Kyle Pierson"},
]
dependencies = [
    "mpmath>=1.3",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
fast = [
    "gmpy2>=2.1",
    "python-flint>=0.5",
]
gpu = [
    "cupy-cuda12x>=13.0",
]
gpu-torch = [
    "torch>=2.0",
]
cvs = [
    "connes-cvs>=0.2",
]
viz = [
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
